# Taxi-App-Using-Django-Channels

./: README.md
.github/workflows/: django.yml
server/: manage.py  pyproject.toml  pytest.ini
server/taxi/: asgi.py  middleware.py  routing.py  settings.py  urls.py
server/taxi/settings/: base.py  local.py  test.py  testing.py
server/trips/: admin.py  consumers.py  models.py  serializers.py  views.py
server/trips/migrations/: 0001_initial.py  0002_trip.py  0003_trip_driver_trip_rider.py  0004_alter_trip_status.py  0005_user_photo.py  0006_trip_driver_location.py
server/trips/tests/: factories.py  test_http.py  test_websocket.py
