[tool.poetry]
authors = ["entirelymagic <entirelymagic@gmail.com>"]
description = "Uber-App-Using-Django-Channels"
name = "taxi-ng-app"
version = "0.1.0"

[tool.poetry.dependencies]
Pillow = "8.4.0"
channels = "3.0.4"
channels-redis = "3.3.1"
django = "4.0"
djangorestframework = "3.13.1"
djangorestframework-simplejwt = "5.0.0"
psycopg2-binary = "2.9.2"
pytest-asyncio = "0.16.0"
pytest-django = "4.5.2"
python = "^3.9"
# faker and factory for testing
Faker = "13.3.4"
factory-boy = "3.2.0"
[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
